# TransPyC

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyrightconfig.json
.github/workflows/: deploy.yml  test.yml
docs/: 01-概述与原理.md  02-变量与类型.md  03-控制流.md  04-函数与结构体.md  05-内联汇编与宏.md  06-高级特性与最佳实践.md  07-Rust-API.md  index.md
examples/: README.md
examples/asm_macro/: TransPyC.toml  expected.c  main.py
examples/control_flow/: TransPyC.toml  expected.c  main.py
examples/example1/: TransPyC.toml  expected.c  main.py
examples/hello/: TransPyC.toml  main.py
examples/pointer/: TransPyC.toml  expected.c  main.py
examples/struct/: TransPyC.toml  expected.c  main.py
examples/test_simple/: TransPyC.toml  expected.c  main.py
examples/variables/: TransPyC.toml  expected.c  main.py
lib/utils/: helpers.py
scripts/: regenerate.sh
site/: 404.html  index.html  sitemap.xml
site/01/: index.html
site/01-概述与原理/: index.html
site/02/: index.html
site/02-变量与类型/: index.html
site/03/: index.html
site/03-控制流/: index.html
site/04/: index.html
site/04-函数与结构体/: index.html
site/05/: index.html
site/05-内联汇编与宏/: index.html
site/06/: index.html
site/06-高级特性与最佳实践/: index.html
site/search/: search_index.json
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/constants/: aug_operator_map.rs  builtin_functions.rs  comparator_map.rs  copyright.rs  defaults.rs  error_messages.rs  help.rs  macros.rs  mod.rs  operator_map.rs  storage.rs  supported_file_types.rs  type_map.rs  unary_operator_map.rs
tests/: file_test.rs  translator_test.rs
(+9 files in other folders)
